# ci-benchmark

./: .gitignore  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: build.yml  cron.yml  tests.yml
dummy_lib/: core.py
scripts/: convert_temperatures.py
tests/: test_core.py
